# uxs-rs

./: .gitignore  generator.py  package-lock.json  package.json  response.md  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  commands.rs  lib.rs  main.rs  url.rs  ws.rs
src-tauri/src/commands/: config.rs  mod.rs  window.rs
src-tauri/src/config/: metadata.rs  mod.rs  path.rs
src-tauri/src/core/: config.rs  logger.rs  mod.rs  script.rs  url.rs
src-tauri/src/network/: mod.rs  ws.rs
src-tauri/src/scripts/: click-auto-login.js  core.js  fade-out.js  handle-course.js  modify-targets.js  show-mask.js
src-tauri/src/ui/: commands.rs  mod.rs  webview.rs  window.rs
src/components/common/: GlitchShader.vue
src/layouts/: ConfigPanel.vue  MenuBar.vue
