[package]
name = "uxuescript"
version = "0.1.0"
description = "A xuexitong course-dealing application written in Tauri,Old vision is written in Pyside6, but now I rewrite it in Rust to make it more efficient and cross-platform."
authors = ["unraous"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uxs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.29"
env_logger = "0.11.10"
tokio = "1.50.0"

